# i18n-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/i18n_validator/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_empty_translations.py  test_path_filtering.py  test_plural_suffixes.py
tests/fixtures/edge_cases/: malformed.json  unicode.json
tests/fixtures/invalid/: empty_strings.json  mixed_errors.json  plural_errors.json
tests/fixtures/valid/: simple.json  with_plurals.json
