[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools-scm"]

[project]
name = "i18n-validator"
version = "0.1.0"
description = "Pre-commit hook to validate i18next translation files"
readme = "README.md"
keywords = ["i18n", "i18next", "translations", "pre-commit", "validation"]
license = {file = "LICENSE"}
authors = [
    {name = "Johannes Steinbrenner", email = "johannes.steinbrenner@hotmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pre-commit", "pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
validate-i18n = "i18n_validator.cli:main"

[project.urls]
Homepage = "https://github.com/stoneburnerj/i18n-pre-commit"
Documentation = "https://github.com/stoneburnerj/i18n-pre-commit"
Repository = "https://github.com/stoneburnerj/i18n-pre-commit"
Issues = "https://github.com/stoneburnerj/i18n-pre-commit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "--cov=src/i18n_validator",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests"
]

